# C3-Discord-Bot

./: README.md  main.py  music.py  pyproject.toml
