[tool.poetry]
name = "repl_python3_beta_C3-Bot"
version = "0.1.0"
description = "Python bot by countchrisdo"
authors = ["countchrisdo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
Flask = "^2.0.1"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
